# Snipper

./: CMakeLists.txt  LICENSE  README.md
src/: display.h  language_sort.h  snipper.cpp  snipper.h
